--- a/express-gateway/tsconfig.json
+++ b/express-gateway/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["src/**/*"],
