--- a/notification-service/.env
+++ b/notification-service/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MONGODB_CONNECT_URL="mongodb://localhost:27017,localhost:27018,localhost:27019/notifications?replicaSet=myReplicaSet"
+MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
