--- a/dotnet/backend-micro/backend-micro/appsettings.json
+++ b/dotnet/backend-micro/backend-micro/appsettings.json
@@ -14,5 +14,11 @@
   "Jwt": {
     "Key": "dovt2212somerandomsecretkeyforjwt"
   },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "admin",
+    "Password": "admin123",
+    "QueueName": "example_queue"
+  },
   "AllowedHosts": "*"
 }
