--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,17 @@
-version: '3.7'
+version: '3.8'
 services:
-  mongo1:
-    image: mongo:6.0
-    container_name: mongo1
-    command: --replSet rs0 --bind_ip_all
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
     ports:
-      - 27017:27017
-    volumes:
-      - mongo1-data:/data/db
+      - "5672:5672" # Cổng AMQP để các service kết nối
+      - "15672:15672" # Cổng giao diện quản trị
+    environment:
+      RABBITMQ_DEFAULT_USER: admin # Tên người dùng mặc định
+      RABBITMQ_DEFAULT_PASS: admin123 # Mật khẩu mặc định
     networks:
-      - mongonet
-
-  mongo2:
-    image: mongo:6.0
-    container_name: mongo2
-    command: --replSet rs0 --bind_ip_all
-    ports:
-      - 27018:27017
-    volumes:
-      - mongo2-data:/data/db
-    networks:
-      - mongonet
-
-  mongo3:
-    image: mongo:6.0
-    container_name: mongo3
-    command: --replSet rs0 --bind_ip_all
-    ports:
-      - 27019:27017
-    volumes:
-      - mongo3-data:/data/db
-    networks:
-      - mongonet
+      - rabbitmq_network
 
 networks:
-  mongonet:
-      driver: bridge
-
-
-volumes:
-  mongo1-data:
-  mongo2-data:
-  mongo3-data:
+  rabbitmq_network:
+    driver: bridge
