--- a/express-gateway/package.json
+++ b/express-gateway/package.json
@@ -17,6 +17,7 @@
     "express-gateway": "file:",
     "express-rate-limit": "^7.5.0",
     "http-proxy-middleware": "^3.0.3",
+    "kafkajs": "^2.2.4",
     "nodemon": "^3.1.9",
     "opossum": "^8.4.0"
   },
