--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "core-decorators": "^0.20.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -23,7 +24,9 @@
     "routing-controllers": "^0.10.4"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.6",
     "@types/express": "^5.0.0",
+    "@types/kafkajs": "^1.9.0",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
