--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-decorators": "^1.2.1",
+    "inversify": "^6.2.1",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
+    "mongoose-paginate-v2": "^1.8.5",
     "nodejs-service": "file:",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4"
