--- a/dotnet/backend-micro/backend-micro/appsettings.json
+++ b/dotnet/backend-micro/backend-micro/appsettings.json
@@ -20,5 +20,13 @@
     "Password": "admin123",
     "QueueName": "example_queue"
   },
+  "JwtSettings": {
+    "Issuer": "your-issuer",
+    "Audience": "your-audience",
+    "AccessTokenExpiration": 15, // Thời gian sống của Access Token (phút)
+    "RefreshTokenExpiration": 1440, // Thời gian sống của Refresh Token (phút)
+    "SecretKey": "dovt2212somerandomsecretkeyforjwt" // Khóa bí mật
+  },
+
   "AllowedHosts": "*"
 }
