update micro be

--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -1,2 +1,6 @@
 PORT=4001
 MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
+USERNAME_SQL="dev"
+PASSWORD_SQL= "@dmin123456"
+SERVER_SQL="10.73.131.29"
+NAME_DB_SQL= "hr-recruitment"
