--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -17,18 +17,23 @@
     "express": "^4.21.2",
     "express-decorators": "^1.2.1",
     "inversify": "^6.2.1",
+    "joi": "^17.13.3",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "mongoose-paginate-v2": "^1.8.5",
+    "mssql": "^11.0.1",
     "nodejs-service": "file:",
     "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "^0.10.4",
+    "sequelize": "^6.37.5",
+    "tedious": "^18.6.1"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.6",
     "@types/express": "^5.0.0",
     "@types/kafkajs": "^1.9.0",
+    "@types/mssql": "^9.1.6",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
