--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -1,6 +1,6 @@
 PORT=4001
 MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
-USERNAME_SQL="dev"
+USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
-SERVER_SQL="10.73.131.29"
-NAME_DB_SQL= "hr-recruitment"
+SERVER_SQL="sqlserverezv4"
+NAME_DB_SQL= "EZ_DENSO_V4_TEST"
