--- a/dotnet/backend-micro/recruitment.Services/recruitment.Services.csproj
+++ b/dotnet/backend-micro/recruitment.Services/recruitment.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\recruitment.Core\recruitment.Core.csproj" />
     <ProjectReference Include="..\recruitment.Infrastructure\recruitment.Infrastructure.csproj" />
   </ItemGroup>
