--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amqplib": "^0.10.5",
     "core-decorators": "^0.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-decorators": "^1.2.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/kafkajs": "^1.9.0",
     "@types/mssql": "^9.1.6",
