--- a/express-gateway/package.json
+++ b/express-gateway/package.json
@@ -12,17 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-gateway": "file:",
     "express-rate-limit": "^7.5.0",
     "http-proxy-middleware": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "nodemon": "^3.1.9",
     "opossum": "^8.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/opossum": "^8.1.8",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
