--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -4,3 +4,6 @@ USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
 SERVER_SQL="sqlserverezv4"
 NAME_DB_SQL= "EZ_DENSO_V4_TEST"
+PASSWORD_REDIS="1234qwer!"
+HOST_REDIS="127.0.0.1"
+PORT_REDIS=6379
