--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-decorators": "^1.2.1",
     "inversify": "^6.2.1",
+    "ioredis": "^5.4.2",
     "joi": "^17.13.3",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.12.0",
