create new service

--- a/login-service/.env
+++ b/login-service/.env
@@ -7,3 +7,7 @@ API_LOGIN_AD="http://10.73.131.59:1113/api/login/LoginByAzAd"
 API_GATEWAY="http://localhost:3000"
 SECRET_REFRESH="dokunno1"
 JWT_SECRET="dokunno1"
+PASSWORD_REDIS="1234qwer!"
+HOST_REDIS="127.0.0.1"
+PORT_REDIS=6379
+API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/api/EzInfo/GetEmployee"
