--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -7,3 +7,4 @@ NAME_DB_SQL= "EZ_DENSO_V4_TEST"
 PASSWORD_REDIS="1234qwer!"
 HOST_REDIS="127.0.0.1"
 PORT_REDIS=6379
+API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/api/EzInfo/GetEmployee"
