--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.5",
+    "axios": "^1.7.9",
     "core-decorators": "^0.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
