--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -3,8 +3,8 @@ MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=tru
 USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
 SERVER_SQL="sqlserverezv4"
-NAME_DB_SQL= "EZ_DENSO_V4_TEST"
+NAME_DB_SQL= "EZ_DENSO_V4_TEST_2025"
 PASSWORD_REDIS="1234qwer!"
 HOST_REDIS="127.0.0.1"
 PORT_REDIS=6379
-API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/api/EzInfo/GetEmployee"
+API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/Ezv4/api/ManageEmployee/GetListEmployeeInfo"
