--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -1,5 +1,6 @@
 PORT=4001
-MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
+# MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
+MONGODB_CONNECT_URL="mongodb://10.73.131.60:27017/backend-hr"
 USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
 SERVER_SQL="sqlserverezv4"
