--- a/email-service/package.json
+++ b/email-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "email-service": "file:",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
