--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -1,6 +1,6 @@
 PORT=4001
 # MONGODB_CONNECT_URL="mongodb://127.0.0.1:27017/notification?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.7"
-MONGODB_CONNECT_URL="mongodb://10.73.131.60:27017/backend-hr"
+MONGODB_CONNECT_URL="mongodb://10.73.131.60:27017/notification"
 USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
 SERVER_SQL="sqlserverezv4"
@@ -9,3 +9,4 @@ PASSWORD_REDIS="1234qwer!"
 HOST_REDIS="127.0.0.1"
 PORT_REDIS=6379
 API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/Ezv4/api/ManageEmployee/GetListEmployeeInfo"
+API_NAME_STRUCTURE="http://10.73.131.59:1113/Ezv4/api/CompanyStructure/GetListCompanyStructure?org_code=2"
