--- a/file-service/package.json
+++ b/file-service/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "file-service": "file:",
+    "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "unoconv": "^0.1.2"
   }
 }
