--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -30,7 +30,8 @@
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "sequelize": "^6.37.5",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.6",
