--- a/login-service/package.json
+++ b/login-service/package.json
@@ -23,7 +23,7 @@
     "mssql": "^11.0.1",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
-    "uuid": "^11.0.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -33,6 +33,7 @@
     "@types/mssql": "^9.1.6",
     "@types/node": "^22.13.0",
     "@types/redis": "^4.0.11",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
