--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -26,12 +26,14 @@
     "mongoose": "^8.9.2",
     "mongoose-paginate-v2": "^1.8.5",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodejs-service": "file:",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.6",
@@ -39,6 +41,7 @@
     "@types/express": "^5.0.0",
     "@types/kafkajs": "^1.9.0",
     "@types/mssql": "^9.1.6",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
