--- a/nodejs-service/package.json
+++ b/nodejs-service/package.json
@@ -24,6 +24,7 @@
     "kafkajs": "^2.2.4",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "mongoose-paginate-v2": "^1.8.5",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
