--- a/email-service/package.json
+++ b/email-service/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
+    "juice": "^11.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
