--- a/file-service/.env
+++ b/file-service/.env
@@ -1,2 +1,2 @@
 PORT=3345
-MONGODB_CONNECT_URL=mongodb://localhost:27017/notifications
+MONGODB_CONNECT_URL=mongodb://10.73.131.60:27017/notifications
