--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -10,3 +10,4 @@ HOST_REDIS="127.0.0.1"
 PORT_REDIS=6379
 API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/Ezv4/api/ManageEmployee/GetListEmployeeInfo"
 API_NAME_STRUCTURE="http://10.73.131.59:1113/Ezv4/api/CompanyStructure/GetListCompanyStructure?org_code=2"
+API_GET_FULL_INFO_USER_EZV4="http://10.73.131.20:8091/api/ListApprover/GetEmpInforInOrganization"
