--- a/email-service/package.json
+++ b/email-service/package.json
@@ -16,12 +16,15 @@
     "dotenv": "^16.4.7",
     "email-service": "file:",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
     "juice": "^11.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "swagger-jsdoc": "^6.2.8",
