--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -4,7 +4,7 @@ MONGODB_CONNECT_URL="mongodb://10.73.131.60:27017/notification"
 USERNAME_SQL="admin"
 PASSWORD_SQL= "@dmin123456"
 SERVER_SQL="sqlserverezv4"
-NAME_DB_SQL= "EZ_DENSO_V4_TEST_2025"
+NAME_DB_SQL= "EZ_DENSO_V4"
 PASSWORD_REDIS="1234qwer!"
 HOST_REDIS="127.0.0.1"
 PORT_REDIS=6379
