--- a/nodejs-service/.env
+++ b/nodejs-service/.env
@@ -11,3 +11,4 @@ PORT_REDIS=6379
 API_GET_INFO_USER_EZV4="http://10.73.131.59:1113/Ezv4/api/ManageEmployee/GetListEmployeeInfo"
 API_NAME_STRUCTURE="http://10.73.131.59:1113/Ezv4/api/CompanyStructure/GetListCompanyStructure?org_code=2"
 API_GET_FULL_INFO_USER_EZV4="http://10.73.131.20:8091/api/ListApprover/GetEmpInforInOrganization"
+API_GET_DIV_HEAD="http://10.73.131.20:8091/api/ListApprover/GetDivHead"
